support amoro ams in jdk17